@@ -168,19 +168,23 @@ return false;
  * Author: Aly
  */
 function get_user_system_auth($userid){
-	$result = ZBX_AUTH_INTERNAL;
-
-	$user_auth = get_user_auth($userid);
-
-	switch($user_auth){
-		case GROUP_GUI_ACCESS_SYSTEM:
-			$config = select_config();
-			$result = $config['authentication_type'];
-			break;
-		case GROUP_GUI_ACCESS_INTERNAL:
-		case GROUP_GUI_ACCESS_DISABLED:
-		default:
-			break;
+	$config = select_config();
+	
+	if($config['authentication_type'] == ZBX_AUTH_HTTP){
+		$result = ZBX_AUTH_HTTP;
+	}
+	else{
+		$result = get_user_auth($userid);
+		switch($result){
+			case GROUP_GUI_ACCESS_SYSTEM:
+				$config = select_config();
+				$result = $config['authentication_type'];
+				break;
+			case GROUP_GUI_ACCESS_INTERNAL:
+			case GROUP_GUI_ACCESS_DISABLED:
+			default:
+				break;
+		}
 	}
 
 return $result;
